log
Fri 14 Oct 2022 03:36:49 PM UTC: 
 tests:  0|4
total_score: 0/70
7fb08f9
Fri 14 Oct 2022 03:48:59 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
e37ddc9
Fri 14 Oct 2022 03:52:03 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   21 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
adcd8d5
Fri 14 Oct 2022 03:53:58 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |     return pq->heapArray[0]->data;
      |                            ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2d19f78
Fri 14 Oct 2022 03:55:37 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   22 |     return pq->heapArray[0]->data;
      |                            ^~
Compilation failed
b2804d6
Fri 14 Oct 2022 03:55:46 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
932ad3f
Fri 14 Oct 2022 04:39:05 PM UTC: 
 heap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:20: error: ‘HeapElem’ undeclared (first use in this function); did you mean ‘heapElem’?
   30 |   heapElem* new = (HeapElem*)malloc(sizeof(heapElem));
      |                    ^~~~~~~~
      |                    heapElem
heap.c:30:20: note: each undeclared identifier is reported only once for each function it appears in
heap.c:30:29: error: expected expression before ‘)’ token
   30 |   heapElem* new = (HeapElem*)malloc(sizeof(heapElem));
      |                             ^
heap.c:35:32: error: expected ‘;’ before ‘pq’
   35 |     pq->capac = pq->capac*2 + 1
      |                                ^
      |                                ;
   36 |     pq->heapArray = realloc(pq->heapArray,pq->capac);
      |     ~~                          
heap.c:38:29: error: incompatible types when assigning to type ‘heapElem’ {aka ‘struct nodo’} from type ‘heapElem *’ {aka ‘struct nodo *’}
   38 |   pq->heapArray[pq->size] = new;
      |                             ^~~
heap.c:41:23: error: expected expression before ‘int’
   41 |     if (pq->heapArray[int((y-1)/2)]->priority < new->priority){
      |                       ^~~
heap.c:42:39: error: expected expression before ‘int’
   42 |       pq->heapArray[y]= pq->heapArray[int((y-1)/2)];
      |                                       ^~~
heap.c:43:21: error: expected expression before ‘int’
   43 |       pq->heapArray[int((y-1)/2)] = new;
      |                     ^~~
heap.c:44:11: error: expected expression before ‘int’
   44 |       y = int((y-1)/2);
      |           ^~~
Compilation failed
5709fed
Fri 14 Oct 2022 04:39:18 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:32: error: expected ‘;’ before ‘pq’
   35 |     pq->capac = pq->capac*2 + 1
      |                                ^
      |                                ;
   36 |     pq->heapArray = realloc(pq->heapArray,pq->capac);
      |     ~~                          
heap.c:38:29: error: incompatible types when assigning to type ‘heapElem’ {aka ‘struct nodo’} from type ‘heapElem *’ {aka ‘struct nodo *’}
   38 |   pq->heapArray[pq->size] = new;
      |                             ^~~
heap.c:41:23: error: expected expression before ‘int’
   41 |     if (pq->heapArray[int((y-1)/2)]->priority < new->priority){
      |                       ^~~
heap.c:42:39: error: expected expression before ‘int’
   42 |       pq->heapArray[y]= pq->heapArray[int((y-1)/2)];
      |                                       ^~~
heap.c:43:21: error: expected expression before ‘int’
   43 |       pq->heapArray[int((y-1)/2)] = new;
      |                     ^~~
heap.c:44:11: error: expected expression before ‘int’
   44 |       y = int((y-1)/2);
      |           ^~~
Compilation failed
401b398
Fri 14 Oct 2022 04:39:36 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:32: error: expected ‘;’ before ‘pq’
   35 |     pq->capac = pq->capac*2 + 1
      |                                ^
      |                                ;
   36 |     pq->heapArray = realloc(pq->heapArray,pq->capac);
      |     ~~                          
heap.c:38:29: error: incompatible types when assigning to type ‘heapElem’ {aka ‘struct nodo’} from type ‘heapElem *’ {aka ‘struct nodo *’}
   38 |   pq->heapArray[pq->size] = new;
      |                             ^~~
heap.c:41:33: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   41 |     if (pq->heapArray[((y-1)/2)]->priority < new->priority){
      |                                 ^~
heap.c:42:39: error: expected expression before ‘int’
   42 |       pq->heapArray[y]= pq->heapArray[int((y-1)/2)];
      |                                       ^~~
heap.c:43:34: error: incompatible types when assigning to type ‘heapElem’ {aka ‘struct nodo’} from type ‘heapElem *’ {aka ‘struct nodo *’}
   43 |       pq->heapArray[((y-1)/2)] = new;
      |                                  ^~~
heap.c:44:11: error: expected expression before ‘int’
   44 |       y = int((y-1)/2);
      |           ^~~
Compilation failed
fd9bee3
